laporan_error.txt
=== PENYEBAB UTAMA MANIFEST MERGER GAGAL ===
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:desugarDebugFileDependencies
> Task :app:processDebugManifestForPackage
> Task :app:mergeDebugJavaResource
> Task :app:checkDebugDuplicateClasses
> Task :app:processDebugResources
> Task :app:mergeExtDexDebug

> Task :app:compileDebugJavaWithJavac
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/core/engine/SafetyPolicyEngine.java:40: error: cannot find symbol
        if (command.text != null && BLACKLIST_PATTERN.matcher(command.text).find()) {
                   ^
  symbol:   variable text
  location: variable command of type ActionCommandDto
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/core/engine/SafetyPolicyEngine.java:40: error: cannot find symbol
        if (command.text != null && BLACKLIST_PATTERN.matcher(command.text).find()) {
                                                                     ^
  symbol:   variable text
  location: variable command of type ActionCommandDto
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/core/engine/SafetyPolicyEngine.java:42: error: cannot find symbol
            reason = "Perintah mengandung kata kunci berbahaya: " + command.text;
                                                                           ^
  symbol:   variable text
